{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 249,
  "lineage": "aba0b7c7-9c87-c25a-f982-1fef48dc7128",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae1931ddee711edb",
            "association_id": "eipassoc-06fe07d0a63466824",
            "domain": "vpc",
            "id": "eipalloc-0ae1931ddee711edb",
            "instance": "i-02d7528bb968f63cc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0860018ee0c38e005",
            "private_dns": "ip-10-0-101-138.ec2.internal",
            "private_ip": "10.0.101.138",
            "public_dns": "ec2-3-211-106-40.compute-1.amazonaws.com",
            "public_ip": "3.211.106.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "tags_all": {
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_public.aws_instance.this",
            "module.onestopnews.aws_cloudwatch_log_group.flow_log",
            "module.onestopnews.aws_customer_gateway.this",
            "module.onestopnews.aws_db_subnet_group.database",
            "module.onestopnews.aws_default_network_acl.this",
            "module.onestopnews.aws_default_route_table.default",
            "module.onestopnews.aws_default_security_group.this",
            "module.onestopnews.aws_default_vpc.this",
            "module.onestopnews.aws_egress_only_internet_gateway.this",
            "module.onestopnews.aws_eip.nat",
            "module.onestopnews.aws_elasticache_subnet_group.elasticache",
            "module.onestopnews.aws_flow_log.this",
            "module.onestopnews.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.onestopnews.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.onestopnews.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.onestopnews.aws_internet_gateway.this",
            "module.onestopnews.aws_nat_gateway.this",
            "module.onestopnews.aws_network_acl.database",
            "module.onestopnews.aws_network_acl.elasticache",
            "module.onestopnews.aws_network_acl.intra",
            "module.onestopnews.aws_network_acl.outpost",
            "module.onestopnews.aws_network_acl.private",
            "module.onestopnews.aws_network_acl.public",
            "module.onestopnews.aws_network_acl.redshift",
            "module.onestopnews.aws_network_acl_rule.database_inbound",
            "module.onestopnews.aws_network_acl_rule.database_outbound",
            "module.onestopnews.aws_network_acl_rule.elasticache_inbound",
            "module.onestopnews.aws_network_acl_rule.elasticache_outbound",
            "module.onestopnews.aws_network_acl_rule.intra_inbound",
            "module.onestopnews.aws_network_acl_rule.intra_outbound",
            "module.onestopnews.aws_network_acl_rule.outpost_inbound",
            "module.onestopnews.aws_network_acl_rule.outpost_outbound",
            "module.onestopnews.aws_network_acl_rule.private_inbound",
            "module.onestopnews.aws_network_acl_rule.private_outbound",
            "module.onestopnews.aws_network_acl_rule.public_inbound",
            "module.onestopnews.aws_network_acl_rule.public_outbound",
            "module.onestopnews.aws_network_acl_rule.redshift_inbound",
            "module.onestopnews.aws_network_acl_rule.redshift_outbound",
            "module.onestopnews.aws_redshift_subnet_group.redshift",
            "module.onestopnews.aws_route.database_internet_gateway",
            "module.onestopnews.aws_route.database_ipv6_egress",
            "module.onestopnews.aws_route.database_nat_gateway",
            "module.onestopnews.aws_route.private_ipv6_egress",
            "module.onestopnews.aws_route.private_nat_gateway",
            "module.onestopnews.aws_route.public_internet_gateway",
            "module.onestopnews.aws_route.public_internet_gateway_ipv6",
            "module.onestopnews.aws_route_table.database",
            "module.onestopnews.aws_route_table.elasticache",
            "module.onestopnews.aws_route_table.intra",
            "module.onestopnews.aws_route_table.private",
            "module.onestopnews.aws_route_table.public",
            "module.onestopnews.aws_route_table.redshift",
            "module.onestopnews.aws_route_table_association.database",
            "module.onestopnews.aws_route_table_association.elasticache",
            "module.onestopnews.aws_route_table_association.intra",
            "module.onestopnews.aws_route_table_association.outpost",
            "module.onestopnews.aws_route_table_association.private",
            "module.onestopnews.aws_route_table_association.public",
            "module.onestopnews.aws_route_table_association.redshift",
            "module.onestopnews.aws_route_table_association.redshift_public",
            "module.onestopnews.aws_subnet.database",
            "module.onestopnews.aws_subnet.elasticache",
            "module.onestopnews.aws_subnet.intra",
            "module.onestopnews.aws_subnet.outpost",
            "module.onestopnews.aws_subnet.private",
            "module.onestopnews.aws_subnet.public",
            "module.onestopnews.aws_subnet.redshift",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_dhcp_options.this",
            "module.onestopnews.aws_vpc_dhcp_options_association.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this",
            "module.onestopnews.aws_vpn_gateway.this",
            "module.onestopnews.aws_vpn_gateway_attachment.this",
            "module.onestopnews.aws_vpn_gateway_route_propagation.intra",
            "module.onestopnews.aws_vpn_gateway_route_propagation.private",
            "module.onestopnews.aws_vpn_gateway_route_propagation.public",
            "module.onestopnews.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.onestopnews.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.public_bastion_host_sg.aws_security_group.this",
            "module.public_bastion_host_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:729702075074:instance/i-00d5259fde55a16c9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d5259fde55a16c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee1961c1b91bf61a",
            "private_dns": "ip-10-0-1-174.ec2.internal",
            "private_ip": "10.0.1.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d62a2628499349e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf02d2c4852b3a53",
            "tags": {
              "Name": "staging-PrivateVM",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "tags_all": {
              "Name": "staging-PrivateVM",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "staging-PrivateVM"
            },
            "vpc_security_group_ids": [
              "sg-00028f515a4939393"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.onestopnews.aws_cloudwatch_log_group.flow_log",
            "module.onestopnews.aws_customer_gateway.this",
            "module.onestopnews.aws_db_subnet_group.database",
            "module.onestopnews.aws_default_network_acl.this",
            "module.onestopnews.aws_default_route_table.default",
            "module.onestopnews.aws_default_security_group.this",
            "module.onestopnews.aws_default_vpc.this",
            "module.onestopnews.aws_egress_only_internet_gateway.this",
            "module.onestopnews.aws_eip.nat",
            "module.onestopnews.aws_elasticache_subnet_group.elasticache",
            "module.onestopnews.aws_flow_log.this",
            "module.onestopnews.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.onestopnews.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.onestopnews.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.onestopnews.aws_internet_gateway.this",
            "module.onestopnews.aws_nat_gateway.this",
            "module.onestopnews.aws_network_acl.database",
            "module.onestopnews.aws_network_acl.elasticache",
            "module.onestopnews.aws_network_acl.intra",
            "module.onestopnews.aws_network_acl.outpost",
            "module.onestopnews.aws_network_acl.private",
            "module.onestopnews.aws_network_acl.public",
            "module.onestopnews.aws_network_acl.redshift",
            "module.onestopnews.aws_network_acl_rule.database_inbound",
            "module.onestopnews.aws_network_acl_rule.database_outbound",
            "module.onestopnews.aws_network_acl_rule.elasticache_inbound",
            "module.onestopnews.aws_network_acl_rule.elasticache_outbound",
            "module.onestopnews.aws_network_acl_rule.intra_inbound",
            "module.onestopnews.aws_network_acl_rule.intra_outbound",
            "module.onestopnews.aws_network_acl_rule.outpost_inbound",
            "module.onestopnews.aws_network_acl_rule.outpost_outbound",
            "module.onestopnews.aws_network_acl_rule.private_inbound",
            "module.onestopnews.aws_network_acl_rule.private_outbound",
            "module.onestopnews.aws_network_acl_rule.public_inbound",
            "module.onestopnews.aws_network_acl_rule.public_outbound",
            "module.onestopnews.aws_network_acl_rule.redshift_inbound",
            "module.onestopnews.aws_network_acl_rule.redshift_outbound",
            "module.onestopnews.aws_redshift_subnet_group.redshift",
            "module.onestopnews.aws_route.database_internet_gateway",
            "module.onestopnews.aws_route.database_ipv6_egress",
            "module.onestopnews.aws_route.database_nat_gateway",
            "module.onestopnews.aws_route.private_ipv6_egress",
            "module.onestopnews.aws_route.private_nat_gateway",
            "module.onestopnews.aws_route.public_internet_gateway",
            "module.onestopnews.aws_route.public_internet_gateway_ipv6",
            "module.onestopnews.aws_route_table.database",
            "module.onestopnews.aws_route_table.elasticache",
            "module.onestopnews.aws_route_table.intra",
            "module.onestopnews.aws_route_table.private",
            "module.onestopnews.aws_route_table.public",
            "module.onestopnews.aws_route_table.redshift",
            "module.onestopnews.aws_route_table_association.database",
            "module.onestopnews.aws_route_table_association.elasticache",
            "module.onestopnews.aws_route_table_association.intra",
            "module.onestopnews.aws_route_table_association.outpost",
            "module.onestopnews.aws_route_table_association.private",
            "module.onestopnews.aws_route_table_association.public",
            "module.onestopnews.aws_route_table_association.redshift",
            "module.onestopnews.aws_route_table_association.redshift_public",
            "module.onestopnews.aws_subnet.database",
            "module.onestopnews.aws_subnet.elasticache",
            "module.onestopnews.aws_subnet.intra",
            "module.onestopnews.aws_subnet.outpost",
            "module.onestopnews.aws_subnet.private",
            "module.onestopnews.aws_subnet.public",
            "module.onestopnews.aws_subnet.redshift",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_dhcp_options.this",
            "module.onestopnews.aws_vpc_dhcp_options_association.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this",
            "module.onestopnews.aws_vpn_gateway.this",
            "module.onestopnews.aws_vpn_gateway_attachment.this",
            "module.onestopnews.aws_vpn_gateway_route_propagation.intra",
            "module.onestopnews.aws_vpn_gateway_route_propagation.private",
            "module.onestopnews.aws_vpn_gateway_route_propagation.public",
            "module.onestopnews.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.onestopnews.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:729702075074:instance/i-02d7528bb968f63cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02d7528bb968f63cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0860018ee0c38e005",
            "private_dns": "ip-10-0-101-138.ec2.internal",
            "private_ip": "10.0.101.138",
            "public_dns": "ec2-18-234-201-168.compute-1.amazonaws.com",
            "public_ip": "18.234.201.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08920dbecba99bfe0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075103dc0f6f297bf",
            "tags": {
              "Name": "staging-Bastionhost",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "tags_all": {
              "Name": "staging-Bastionhost",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "staging-Bastionhost"
            },
            "vpc_security_group_ids": [
              "sg-05310c182f9aa3176"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.onestopnews.aws_subnet.public",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this",
            "module.public_bastion_host_sg.aws_security_group.this",
            "module.public_bastion_host_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.elb_classic.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:729702075074:loadbalancer/OneStopNews-staging-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "OneStopNews-staging-elb-1915307094.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "OneStopNews-staging-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "HTTP",
                "lb_port": 80,
                "lb_protocol": "HTTP"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 81,
                "lb_protocol": "http"
              }
            ],
            "name": "OneStopNews-staging-elb",
            "security_groups": [
              "sg-0a113bdc27c8d1405"
            ],
            "source_security_group": "729702075074/loadbalancer_sg-20220722103848735400000002",
            "source_security_group_id": "sg-0a113bdc27c8d1405",
            "subnets": [
              "subnet-04c92ae789787ee9d",
              "subnet-075103dc0f6f297bf"
            ],
            "tags": {
              "Name": "OneStopNews-staging-elb",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "tags_all": {
              "Name": "OneStopNews-staging-elb",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.onestopnews.aws_subnet.public",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:security-group/sg-0a113bdc27c8d1405",
            "description": "Security Group with HTTP open for entire VPC Block (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-0a113bdc27c8d1405",
            "ingress": [],
            "name": "loadbalancer_sg-20220722103848735400000002",
            "name_prefix": "loadbalancer_sg-",
            "owner_id": "729702075074",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer_sg",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "tags_all": {
              "Name": "loadbalancer_sg",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1465248565",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a113bdc27c8d1405",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.onestopnews.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-132765921",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a113bdc27c8d1405",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.onestopnews.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058a50670f34475d2",
            "domain": "vpc",
            "id": "eipalloc-058a50670f34475d2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-94-223-90.compute-1.amazonaws.com",
            "public_ip": "3.94.223.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-us-east-1a",
              "Owner": "Kiran"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-us-east-1a",
              "Owner": "Kiran"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:internet-gateway/igw-0dbfd5d24a9085619",
            "id": "igw-0dbfd5d24a9085619",
            "owner_id": "729702075074",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc",
              "Owner": "Kiran"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc",
              "Owner": "Kiran"
            },
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058a50670f34475d2",
            "connectivity_type": "public",
            "id": "nat-00fd0e8e4cbdb7d08",
            "network_interface_id": "eni-034c0d136866e38e4",
            "private_ip": "10.0.101.142",
            "public_ip": "3.94.223.90",
            "subnet_id": "subnet-075103dc0f6f297bf",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-us-east-1a",
              "Owner": "Kiran"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-us-east-1a",
              "Owner": "Kiran"
            }
          },
          "dependencies": [
            "module.onestopnews.aws_eip.nat",
            "module.onestopnews.aws_internet_gateway.this",
            "module.onestopnews.aws_subnet.public",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e0b4ad6764c9e3151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00fd0e8e4cbdb7d08",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e0b4ad6764c9e315",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_eip.nat",
            "module.onestopnews.aws_internet_gateway.this",
            "module.onestopnews.aws_nat_gateway.this",
            "module.onestopnews.aws_route_table.private",
            "module.onestopnews.aws_subnet.public",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dbfd5d24a9085619",
            "id": "r-rtb-0f33f248e9cfac7c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f33f248e9cfac7c4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_internet_gateway.this",
            "module.onestopnews.aws_route_table.public",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:route-table/rtb-0067743d225b86f21",
            "id": "rtb-0067743d225b86f21",
            "owner_id": "729702075074",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-db",
              "Owner": "Kiran"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-db",
              "Owner": "Kiran"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:route-table/rtb-0e0b4ad6764c9e315",
            "id": "rtb-0e0b4ad6764c9e315",
            "owner_id": "729702075074",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-private",
              "Owner": "Kiran"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-private",
              "Owner": "Kiran"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:route-table/rtb-0f33f248e9cfac7c4",
            "id": "rtb-0f33f248e9cfac7c4",
            "owner_id": "729702075074",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-public",
              "Owner": "Kiran"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-public",
              "Owner": "Kiran"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d475a240b5d0d14f",
            "route_table_id": "rtb-0067743d225b86f21",
            "subnet_id": "subnet-0558b33b076bb0b97"
          },
          "dependencies": [
            "module.onestopnews.aws_route_table.database",
            "module.onestopnews.aws_route_table.private",
            "module.onestopnews.aws_subnet.database",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba905d45f0db2ee8",
            "route_table_id": "rtb-0067743d225b86f21",
            "subnet_id": "subnet-020d905e5c4377816"
          },
          "dependencies": [
            "module.onestopnews.aws_route_table.database",
            "module.onestopnews.aws_route_table.private",
            "module.onestopnews.aws_subnet.database",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be8e893616cc4a61",
            "route_table_id": "rtb-0e0b4ad6764c9e315",
            "subnet_id": "subnet-0bf02d2c4852b3a53"
          },
          "dependencies": [
            "module.onestopnews.aws_route_table.private",
            "module.onestopnews.aws_subnet.private",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc7ec62fbe3a85a5",
            "route_table_id": "rtb-0e0b4ad6764c9e315",
            "subnet_id": "subnet-0f34441a8de16a6c7"
          },
          "dependencies": [
            "module.onestopnews.aws_route_table.private",
            "module.onestopnews.aws_subnet.private",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066b7f93c932ae685",
            "route_table_id": "rtb-0f33f248e9cfac7c4",
            "subnet_id": "subnet-075103dc0f6f297bf"
          },
          "dependencies": [
            "module.onestopnews.aws_route_table.public",
            "module.onestopnews.aws_subnet.public",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081cf097169818125",
            "route_table_id": "rtb-0f33f248e9cfac7c4",
            "subnet_id": "subnet-04c92ae789787ee9d"
          },
          "dependencies": [
            "module.onestopnews.aws_route_table.public",
            "module.onestopnews.aws_subnet.public",
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:subnet/subnet-0558b33b076bb0b97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0558b33b076bb0b97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729702075074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-db-us-east-1a",
              "Owner": "Kiran",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-db-us-east-1a",
              "Owner": "Kiran",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:subnet/subnet-020d905e5c4377816",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020d905e5c4377816",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729702075074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-db-us-east-1b",
              "Owner": "Kiran",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-db-us-east-1b",
              "Owner": "Kiran",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:subnet/subnet-0bf02d2c4852b3a53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf02d2c4852b3a53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729702075074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-private-us-east-1a",
              "Owner": "Kiran",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-private-us-east-1a",
              "Owner": "Kiran",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:subnet/subnet-0f34441a8de16a6c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f34441a8de16a6c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729702075074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-private-us-east-1b",
              "Owner": "Kiran",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-private-us-east-1b",
              "Owner": "Kiran",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:subnet/subnet-075103dc0f6f297bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075103dc0f6f297bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729702075074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-public-us-east-1a",
              "Owner": "Kiran",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-public-us-east-1a",
              "Owner": "Kiran",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:subnet/subnet-04c92ae789787ee9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c92ae789787ee9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729702075074",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-public-us-east-1b",
              "Owner": "Kiran",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc-public-us-east-1b",
              "Owner": "Kiran",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.onestopnews.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.onestopnews",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:vpc/vpc-0d1fa3882e5d46126",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d0ca14279af7dc13",
            "default_route_table_id": "rtb-098011e476068395f",
            "default_security_group_id": "sg-0613aa8c9d1ee3127",
            "dhcp_options_id": "dopt-beea69c4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d1fa3882e5d46126",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098011e476068395f",
            "owner_id": "729702075074",
            "tags": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc",
              "Owner": "Kiran"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "OneStopNews-staging-myvpc",
              "Owner": "Kiran"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:security-group/sg-00028f515a4939393",
            "description": "private sg with ssh and tcp  ",
            "egress": [],
            "id": "sg-00028f515a4939393",
            "ingress": [],
            "name": "private-sg-20220722103849005300000003",
            "name_prefix": "private-sg-",
            "owner_id": "729702075074",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "tags_all": {
              "Name": "private-sg",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-922210291",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00028f515a4939393",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-540719999",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00028f515a4939393",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1403880895",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00028f515a4939393",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_host_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729702075074:security-group/sg-05310c182f9aa3176",
            "description": "public bastion host security group with ssh open to internet",
            "egress": [],
            "id": "sg-05310c182f9aa3176",
            "ingress": [],
            "name": "public-bastion-host-sg-20220722103848622800000001",
            "name_prefix": "public-bastion-host-sg-",
            "owner_id": "729702075074",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-host-sg",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "tags_all": {
              "Name": "public-bastion-host-sg",
              "environment": "staging",
              "owners": "OneStopNews"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1fa3882e5d46126"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_host_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2027077671",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05310c182f9aa3176",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.public_bastion_host_sg.aws_security_group.this",
            "module.public_bastion_host_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_host_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1441704619",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05310c182f9aa3176",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.onestopnews.aws_vpc.this",
            "module.public_bastion_host_sg.aws_security_group.this",
            "module.public_bastion_host_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}